# core.dashboards_store

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.html  README.md  azure-pipelines.yml  dbt_project.yml  pyproject.toml
.azuredevops/: pull_request_template.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build_docker.yml  integration_testing.yml  licence.yml  nightly.yml  release.yml  sqlfmt.yml
depechecode/: DAG.py  Dockerfile  cdbt  cicd  profiles.yml
depechecode/DAG/: DAG.py
macros/helpers/: weekdays_between.sql
macros/indexes/: indexes.sql
macros/introspection/: drop_one_schema.sql  drop_schema.sql  drop_tmp_table_for_current_model.sql  drop_tmp_tables.sql  schema.yml  seeds_validator.sql  source_or_ref.sql  stamper.sql
macros/parameters/: get_current_year.sql  schema.yml
macros/tests/: accepted_values_from_ref.sql  schema.yml  test_max_le_zero.sql  test_resolution.sql
macros/utils/: adapt.sql
models/: foo.sql
models/adapters/: sources.yml
models/bridges/: schema.yml
models/emp_actif/: schema.yml
models/emp_conge/: schema.yml
models/features/: fact_eleve.sql  fact_tps_partial.sql  schema.yml
models/interfaces/: i_dim_eleve.sql  schema.yml
models/marts/: schema.yml
models/prospectif_cdp/: schema.yml
models/res_epreuves/: schema.yml
models/res_etapes/: schema.yml
models/rls/: ecoles.sql  eleve_groupes.sql  enseignants_primaire_tuteurs.sql  enseignants_secondaire.sql  liste_unique_groupes_secondaire.sql  schema.yml  utilisateurs_ecoles.sql
models/spines/: base_spine.sql  schema.yml  stg_populations.sql
models/store_template/: schema.yml
models/suivi_resultats/: schema.yml
models/transport/: schema.yml
nightly/: README.md
nightly/dbt/: dbt_project.yml
nightly/docker/: Dockerfile
reporting/: retirement:memory:.ses  test_el_insc.pbix
reporting/Demissions/: resignation.pbit
reporting/chronic_absenteeism/: chronic_absenteism.pbit  chronic_absenteism.pbix
reporting/diplome/: suivi_diplomation.xlsx
reporting/effectif_css/: Effectifs du css.pbit  effectif_css.pbit
reporting/emp_actif/: emp_actif.pbit  emp_actif.rdl  employe_actif.pbit
reporting/emp_conge/: emp_conge.pbit  emp_conge.pbix
reporting/gabarait_tdb/: Gabarit.pbix
reporting/gabarit_tdb/: Gabarit.pbit  gabarit.pbit
reporting/other/: pevr.pbit
reporting/pevr/: Pevr.pbit  pevr.pbit
reporting/predictive_view_aggregated/: predictive_view_aggregated.pbit
reporting/prospectif_cdp/: Bulletdatafev2023.xlsx  tbe.pbit
reporting/res_epreuves/: rslt_epreuves.pbit  rslt_etape_epreuves.pbit  rslt_etape_epreuves_anonymisé.pbit
reporting/res_etapes/: rslt_etape_epreuves.pbit
reporting/res_scolaires/: Analyse des résultats scolaires.pbit
reporting/retirement/: retirement.pbit  retirement.pbix
reporting/suivi_resultats/: suivi_resultats.pbit  suivi_resultats_anonymise.pbix
reporting/transport/: Organisation_du_transport_scolaire.pbit  Transport_scolaire.pbit
seeds/common/: int_sequence_0_to_1000.csv  schema.yml
seeds/emp_actif/: schema.yml
seeds/res_epreuves/: default_subject_evaluation.csv
seeds/res_etapes/: default_subject_evaluation.csv  schema.yml
seeds/suivi_resultats/: tracked_courses.csv  tracked_levels.csv
template/: cookiecutter.json
template/{{ cookiecutter.project_slug }}/: dbt_project.yml  packages.yml  profiles.yml  readme.md
tooling/depechecode/: Dockerfile  (+3 more)
(+774 files in other folders)
