[tool.poetry]
name = "core.data.tbe"
version = "0.0.0"
description = ""
authors = ["alluardj <alluardj@csvdc.qc.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "~1.4"
dbt-sqlserver = "~1.3"
pyodbc = "~4.0"
python-semantic-release = "^7.33.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "dbt_project.yml:version",
    "pyproject.toml:tool.poetry.version",
]
build_command = false
upload_to_pypi = false
upload_to_release = false
upload_to_repository = false
