[tool.poetry]
name = "core.data.store"
version = "0.2.0"
description = ""
authors = ["alluardj <alluardj@csvdc.qc.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "~1.4"
dbt-sqlserver = "~1.4"
pyodbc = "~4.0"
python-semantic-release = "^7.33.4"


[tool.poetry.dev-dependencies]
cookiecutter = "^2.3.0"
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.19.2"}
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "dbt_project.yml:version",
    "pyproject.toml:tool.poetry:version",
]

[tool.semantic_release.branches.master]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = 'dev'

[tool.semantic_release.branches.release]
match = "release.*"
prerelease = true
prerelease_token = 'rc'

[tool.sqlfmt]
line_length = 88
quiet=true
reset_cache=true
exclude=[
    "target/**/*",
    "dbt_packages/**/*",
    "tolling/templates/**/*"
]