[tool.poetry]
name = "core.data.store"
version = "0.18.0"
description = "core data store for dbt"
authors = ["hugo juhel <juhel.hugo@sciance.ca>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "~1.9"

pyodbc = ">=5.2.0"
python-semantic-release = "^7.33.4"
docutils = "0.20.1"
dbt-fabric = {git = "https://git@github.com/Sciance-Inc/dbt-fabric.git", rev = "v0.19.5"}


[tool.poetry.group.dev.dependencies]
cookiecutter = "^2.3.0"
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.19.2"}
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "dbt_project.yml:version",
    "pyproject.toml:tool.poetry:version",
]
branch              = "master"
upload_to_pypi      = false
upload_to_release   = true
changelog_sections  = ["feature", "fix", "breaking"]
changelog_scope     = "all"
allow_zero_version  = true 
major_on_zero       = false

[tool.semantic_release.version]
pattern = "v(?P<major>0|[1-9]\\d*)\\.(?P<minor>0|[1-9]\\d*)\\.(?P<patch>0|[1-9]\\d*)(?:-(?P<prerelease>(?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\\.(?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\\+(?P<buildmetadata>[0-9a-zA-Z-]+(?:\\.[0-9a-zA-Z-]+)*))?"

[tool.semantic_release.changelog]
template_dir = "tooling/release/templates"
mode = "init"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.master]
match            = "(main|master)"
prerelease       = false
strict           = 1

[tool.sqlfmt]
line_length = 88
quiet=true
reset_cache=true
exclude=[
    "target/**/*",
    "dbt_packages/**/*",
    "tooling/templates/**/*"
]